[tool.poetry]
name = "kasm"
version = "0.1.0"
description = "An assembly stub code generation tool for kernels"
authors = ["mental <m3nta1@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
